syntax = "proto3";

package audit.v1;

option go_package = "github.com/Paukku/ajanvarausjarjestelma/backend/internal/audit/common";
import "google/api/annotations.proto";

message AuditLog {
  string id = 1;
  string action = 2;
  string entity = 3;
  string entity_id = 4;
  string actor_id = 5;
  string ip_address = 6;
  string user_agent = 7;
  string created_at = 8;
}

message GetAuditLogsRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetAuditLogsResponse {
  repeated AuditLog logs = 1;
}

service AuditService {
  rpc GetAuditLogs(GetAuditLogsRequest)
      returns (GetAuditLogsResponse) {
    option (google.api.http) = {
      get: "/api/v1/audit/logs"
    };
  }
}

